# ble-door-unlock-demo

./: README.md  ble_server.py  ble_server_basic.py  pyproject.toml
docs/: BLE_COMMUNICATION_FLOWS.md  IOS_BLE_GATT_SERVER_SPECIFICS.md  KEY_MANAGEMENT_FAQ.md  MASTER_KEY_BLE_CONNECTION_PATTERN.md  WAVELYNX_BLE_GATT_SERVER_ESTIMATE.md  WAVELYNX_BLE_SECURITY_MODEL.md  ble-connection-nonce.md  ble-high-level-overview.md  ble-service-door-unlock.md  intercom-ibeacon-advertising.md  linux-bluetooth-capabilities.md
src/ble_client/: __init__.py  __main__.py  client.py
src/ble_door_unlock/: main.py
src/ble_door_unlock_server/: __init__.py  connection_monitor.py  server.py
src/ble_ibeacon_advertising/: README.md  __init__.py  __main__.py  advertiser.py  ibeacon_packet.py  main.py
src/ble_symmetric_key/: __init__.py
src/ble_symmetric_key/client/: README.md  __init__.py  __main__.py  client.py  crypto.py  derive_key.py  protocol.py  requirements.txt
src/ble_symmetric_key/server/: README.md  WEBSOCKET_COMM.md  __init__.py  __main__.py  crypto.py  protocol.py  requirements.txt  server.py  state.py  websocket_server.py
src/utils/: generate_keys.py
