[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ble-door-unlock"
version = "0.1.0"
description = "BLE GATT server for door unlock POC"
requires-python = ">=3.10"
dependencies = [
    "bless>=0.2.5",
    "cryptography>=46.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ble-server = "ble_door_unlock.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ble_door_unlock"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
